WPL-1> COmplete the layout using the flex box and the css grid properties
WPL-1> Complete the layout using the flex box and the css grid properties

--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
-  <title>Layout Master</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Layout Master</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div class="container">
-  <div class="zone green">Header</div>
-  <div class="zone red">Cover</div>
-  <div class="zone blue">Project Grid</div>
-  <div class="zone yellow">Footer</div>
-</div>
+<nav class="zone green">
+    <ul class="main-nav">
+        <li class="main-nav__item main-nav__home"><a href="#" class="main-nav__item__link">Home</a></li>
+        <li class="main-nav__item"><a href="#" class="main-nav__item__link">Products</a></li>
+        <li class="main-nav__item"><a href="#" class="main-nav__item__link">Team</a></li>
+        <li class="main-nav__item"><a href="#" class="main-nav__item__link">Contact Us</a></li>
+        <li class="main-nav__item"><a href="#" class="main-nav__item__link">About Us</a></li>
+        <li class="main-nav__item"><a href="#" class="main-nav__item__link">Client Center</a></li>
+    </ul>
+</nav>
+<section class="header-container">Cover</section>
+<main class="zone blue section-project">
+    <div class="projects-wrapper">
+        <div class="box zone"><img src="img/data_storage_2_2.png" alt="project image" class="zone__img"></div>
+        <div class="box zone"><img src="img/desktop_analytics_2.png" alt="project image" class="zone__img"></div>
+        <div class="box zone"><img src="img/files_2.png" alt="project image" class="zone__img"></div>
+        <div class="box zone"><img src="img/monitor_coding_2.png" alt="project image" class="zone__img"></div>
+        <div class="box zone"><img src="img/server_2_2.png" alt="project image" class="zone__img"></div>
+        <div class="box zone"><img src="img/server_safe_2.png" alt="project image" class="zone__img"></div>
+        <div class="box zone"><img src="img/server_2_2.png" alt="project image" class="zone__img"></div>
+        <div class="box zone"><img src="img/files_2.png" alt="project image" class="zone__img"></div>
+        <div class="box zone"><img src="img/desktop_analytics_2.png" alt="project image" class="zone__img"></div>
+    </div>
+</main>
+<footer class="zone yellow">Footer</footer>
 </body>
 </html>
