WPL-1> Add multiple links to the footer and make the footer responsive
WPL-1> Add multiple links to the footer and make the footer responsive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<nav class="zone green">
+<nav class="zone blue">
     <ul class="main-nav">
         <li class="main-nav__item main-nav__home"><a href="#" class="main-nav__item__link">Home</a></li>
         <li class="main-nav__item"><a href="#" class="main-nav__item__link">Products</a></li>
@@ -15,7 +15,7 @@
         <li class="main-nav__item"><a href="#" class="main-nav__item__link">Client Center</a></li>
     </ul>
 </nav>
-<section class="header-container">Cover</section>
+<section class="header-container"></section>
 <main class="zone blue section-project">
     <div class="projects-wrapper">
         <div class="box zone"><img src="img/data_storage_2_2.png" alt="project image" class="zone__img"></div>
@@ -29,6 +29,37 @@
         <div class="box zone"><img src="img/desktop_analytics_2.png" alt="project image" class="zone__img"></div>
     </div>
 </main>
-<footer class="zone yellow">Footer</footer>
+<footer class="zone ">
+    <div class="footer__wrapper black">
+    <ul class="footer__category">
+        <li class="footer__category__item footer__category__heading"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+    </ul>
+    <ul class="footer__category">
+        <li class="footer__category__item footer__category__heading"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+    </ul>
+    <ul class="footer__category">
+        <li class="footer__category__item footer__category__heading"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+    </ul>
+    <ul class="footer__category">
+        <li class="footer__category__item footer__category__heading"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+        <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
+    </ul>
+    </div>
+</footer>
 </body>
 </html>
