WPL-1> Make the navbar sticky
WPL-1> Make the navbar sticky

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<nav class="zone blue">
+<nav class="zone blue sticky">
     <ul class="main-nav">
         <li class="main-nav__item main-nav__home"><a href="#" class="main-nav__item__link">Home</a></li>
         <li class="main-nav__item"><a href="#" class="main-nav__item__link">Products</a></li>
@@ -15,7 +15,7 @@
         <li class="main-nav__item"><a href="#" class="main-nav__item__link">Client Center</a></li>
     </ul>
 </nav>
-<section class="header-container"></section>
+<section class="header-container"><img src="img/undraw.png" alt="" class="header-image"></section>
 <main class="zone blue section-project">
     <div class="projects-wrapper">
         <div class="box zone"><img src="img/data_storage_2_2.png" alt="project image" class="zone__img"></div>
