GT-1> Add padding to the section
GT-1> Add padding to the section

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <li class="main-nav__item"><a href="#" class="main-nav__item__link">Client Center</a></li>
     </ul>
 </nav>
-<section class="header-container"><img src="img/undraw.png" alt="" class="header-image"></section>
-<main class="zone blue section-project">
+<section class="section-header section"><img src="img/undraw.png" alt="" class="header-image"></section>
+<main class="zone blue section section-project">
     <div class="projects-wrapper">
         <div class="box zone"><img src="img/data_storage_2_2.png" alt="project image" class="zone__img"></div>
         <div class="box zone"><img src="img/desktop_analytics_2.png" alt="project image" class="zone__img"></div>
@@ -29,8 +29,8 @@
         <div class="box zone"><img src="img/desktop_analytics_2.png" alt="project image" class="zone__img"></div>
     </div>
 </main>
-<footer class="zone ">
-    <div class="footer__wrapper black">
+<footer class="zone section section-footer black">
+    <div class="footer__wrapper">
     <ul class="footer__category">
         <li class="footer__category__item footer__category__heading"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
         <li class="footer__category__item"><a href="#" class="footer__category__item__link">CategoryItem</a></li>
